# CryptoFastAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  links.txt  main.py  makefile  models.py  pyproject.toml
responseSamples/: bitcoin.json  exchanges.json  readme  top100.json
