[tool.poetry]
name = "cryptofastapi"
version = "0.1.0"
description = ""
authors = ["Rafael Matias <rafamatias102@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
